Bug 477710 - [Modern] no styles for horizontal scrollboxes. r+sr=Neil, a2.0=KaiRo.

--- a/suite/themes/modern/global/scrollbox.css
+++ b/suite/themes/modern/global/scrollbox.css
@@ -42,7 +42,7 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
 /* ::::: auto-repeat button ::::: */
- 
+
 autorepeatbutton {
   -moz-box-align: center;
   -moz-box-pack: center;
@@ -54,7 +54,7 @@ autorepeatbutton {
   padding: 3px;
 }
 
-autorepeatbutton:hover {
+autorepeatbutton:not([disabled="true"]):hover {
   margin: 1px;
   border: 1px inset #A5B2C2;
   padding-top: 4px;
@@ -64,10 +64,65 @@ autorepeatbutton:hover {
   background-color: #A5B2C2;
 }
 
-.autorepeatbutton-up {
+.scrollbutton-up,
+.scrollbutton-down {
+  -moz-box-align: center;
+  -moz-box-pack: center;
+}
+
+.scrollbutton-up > .toolbarbutton-text,
+.scrollbutton-down > .toolbarbutton-text {
+  display: none;
+}
+
+/* Vertical enabled */
+.autorepeatbutton-up,
+.scrollbutton-up {
   list-style-image: url("chrome://global/skin/arrow/arrow-up.gif")
 }
 
-.autorepeatbutton-down {
+.autorepeatbutton-down,
+.scrollbutton-down {
   list-style-image: url("chrome://global/skin/arrow/arrow-dn.gif")
+}
+
+/* Vertical disabled */
+.autorepeatbutton-up[disabled="true"],
+.scrollbutton-up[disabled="true"] {
+  list-style-image: url("chrome://global/skin/arrow/arrow-up-dis.gif");
+}
+
+.autorepeatbutton-down[disabled="true"],
+.scrollbutton-down[disabled="true"] {
+  list-style-image: url("chrome://global/skin/arrow/arrow-dn-dis.gif");
+}
+
+/* Horizontal enabled */
+.autorepeatbutton-up[orient="horizontal"],
+.autorepeatbutton-down[orient="horizontal"][chromedir="rtl"],
+.scrollbutton-up[orient="horizontal"],
+.scrollbutton-down[orient="horizontal"][chromedir="rtl"] {
+  list-style-image: url("chrome://global/skin/arrow/arrow-lft.gif");
+}
+
+.autorepeatbutton-down[orient="horizontal"],
+.autorepeatbutton-up[orient="horizontal"][chromedir="rtl"],
+.scrollbutton-down[orient="horizontal"],
+.scrollbutton-up[orient="horizontal"][chromedir="rtl"] {
+  list-style-image: url("chrome://global/skin/arrow/arrow-rit.gif");
+}
+
+ /* Horizontal disabled */
+.autorepeatbutton-up[orient="horizontal"][disabled="true"],
+.autorepeatbutton-down[orient="horizontal"][chromedir="rtl"][disabled="true"],
+.scrollbutton-up[orient="horizontal"][disabled="true"],
+.scrollbutton-down[orient="horizontal"][chromedir="rtl"][disabled="true"] {
+  list-style-image: url("chrome://global/skin/arrow/arrow-lft-dis.gif");
+}
+
+.autorepeatbutton-down[orient="horizontal"][disabled="true"],
+.autorepeatbutton-up[orient="horizontal"][chromedir="rtl"][disabled="true"],
+.scrollbutton-down[orient="horizontal"][disabled="true"],
+.scrollbutton-up[orient="horizontal"][chromedir="rtl"][disabled="true"] {
+  list-style-image: url("chrome://global/skin/arrow/arrow-rit-dis.gif");
 }
